turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:50: error: not found: value setpos
     	setpos(8,33)
        ^